[gd_scene load_steps=3 format=3 uid="uid://training_screen_v1"]

[ext_resource type="Script" path="res://scripts/ui/screens/Training.gd" id="1_training_script"]
[ext_resource type="PackedScene" uid="uid://training_card_v1" path="res://scenes/ui/components/TrainingCard.tscn" id="2_card_scene"]

[node name="Training" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_training_script")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabBar" type="TabBar" parent="VBox"]
layout_mode = 2
tab_count = 2
tab_0/title = "Weekly Plan"
tab_1/title = "Quick Training"
current_tab = 1

[node name="Content" type="PanelContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="WeeklyView" type="Control" parent="VBox/Content"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBox/Content/WeeklyView"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -13.0
offset_right = 66.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Weekly Plan View (Coming Soon)"

[node name="QuickView" type="Control" parent="VBox/Content"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="VBox/Content/QuickView"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TargetList" type="GridContainer" parent="VBox/Content/QuickView/VBox"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="ActionArea" type="HBoxContainer" parent="VBox/Content/QuickView/VBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="IntensityLabel" type="Label" parent="VBox/Content/QuickView/VBox/ActionArea"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Intensity: Normal"
horizontal_alignment = 2

[node name="IntensitySlider" type="HSlider" parent="VBox/Content/QuickView/VBox/ActionArea"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 4.0
value = 2.0
tick_count = 5
ticks_on_borders = true

[node name="ExecuteBtn" type="Button" parent="VBox/Content/QuickView/VBox/ActionArea"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_type_variation = &"ButtonPrimary"
text = "TRAIN"
